<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Platformer Mark 3</string>
    <string name="pause" tools:ignore="UnusedResources">Pause</string>
    <string name="resume">Resume</string>
    <string name="start">Start Game!</string>
    <string name="exit">Exit</string>
    <string name="motion">Motion</string>
    <string name="sfx">SFX</string>
    <string name="bgm">BGM</string>
    <string name="pause_dialog_title">Press back to resume</string>
    <string name="pause_dialog_message">Toggle motion controls, sound effects and background music.</string>

    <string name="title_activity_main" tools:ignore="UnusedResources">Platformer Mark 3</string>
    <string name="game_title">Platformer Mark 3</string>
    <string name="game_subtitle">An exercise in Android- and Java programming</string>
    <string name="gampad_help_title">Gamepad detected!</string>
    <string name="gamepad_help_message">Use the joystick to move, any button to jump and B to exit!</string>
    <string name="exit_confirm">Exit Game?</string>
    <string name="force_landscape">Force landscape</string>
    <string name="force_portrait">Force portrait</string>
    <string name="toogle_music">Toogle Music</string>
    <string name="toogle_sfx">Toogle SFX</string>
    <string name="toogle_rotation">Toogle accelerometer</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
</resources>
