<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/zoomIn"
        android:icon="@drawable/ic_zoom_in"
        android:title="@string/zoom_in"
        app:showAsAction="always"/>
    <item
        android:id="@+id/zoomOut"
        android:icon="@drawable/ic_zoom_out"
        android:title="@string/zoom_out"
        app:showAsAction="always"/>

    <item
        android:id="@+id/screenLockLandscape"
        android:icon="@drawable/ic_screen_lock_landscape"
        android:title="@string/force_landscape"
        app:showAsAction="never|withText"/>

    <item
        android:id="@+id/screenLockPortrait"
        android:icon="@drawable/ic_screen_lock_portrait"
        android:title="@string/force_portrait"
        app:showAsAction="never|withText"/>

      <item
          android:id="@+id/musicToggle"
          android:icon="@drawable/music_on_no_bg"
          android:title="@string/toogle_music"
          app:showAsAction="never|withText"/>

      <item
          android:id="@+id/sfxToggle"
          android:icon="@drawable/sounds_on_no_bg"
          android:title="@string/toogle_sfx"
          app:showAsAction="never|withText"/>
      <item
          android:id="@+id/rotationToggle"
          android:icon="@drawable/ic_screen_rotation"
          android:title="@string/toogle_rotation"
          app:showAsAction="never|withText"/>



</menu>