<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_gravity="center"
                android:background="@drawable/dialog_bg"
                android:layout_width="@dimen/dialog_width"
                android:layout_height="@dimen/dialog_height">

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/exit_confirm"
        android:focusable="false"
        android:textColor="@color/text_color"
        android:textStyle="bold"/>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/btn_resume"
            style="@style/iconButton"
            android:layout_marginRight="@dimen/btn_round_size"
            android:src="@drawable/ic_play_circle_outline"
            android:nextFocusLeft="@+id/btn_exit"
            android:nextFocusForward="@+id/btn_exit"
            android:nextFocusRight="@+id/btn_exit"
            android:tint="@color/black"
            android:contentDescription="@string/resume"
            android:focusable="true"/>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/btn_exit"
            style="@style/iconButton"
            android:nextFocusForward="@id/btn_resume"
            android:nextFocusLeft="@+id/btn_resume"
            android:nextFocusRight="@+id/btn_resume"
            android:src="@drawable/ic_exit_to_app"
            android:tint="@color/black"
            android:contentDescription="@string/exit"
            android:focusable="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons"
        android:layout_width="wrap_content"
        android:focusable="false"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lbl_resume"
            android:layout_width="@dimen/btn_round_size"
            android:layout_marginRight="@dimen/btn_round_size"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:focusable="false"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lbl_exit"
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:focusable="false"
            />
    </LinearLayout>

</RelativeLayout>